--- a/herbal2/res/layout/activity_result.xml
+++ b/herbal2/res/layout/activity_result.xml
@@ -16,8 +16,8 @@
         android:id="@+id/after_lading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:background="#C3Cf51" >
+        android:background="#C3Cf51"
+        android:visibility="invisible" >
 
         <ImageView
             android:id="@+id/result_image"
@@ -37,7 +37,7 @@
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
