--- a/herbal2/res/layout/activity_cover.xml
+++ b/herbal2/res/layout/activity_cover.xml
@@ -10,19 +10,25 @@
         android:layout_height="wrap_content" >
 
         <ImageView
+            android:id="@+id/cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:src="@drawable/cover" />
 
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignBottom="@+id/cover"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"
+            android:adjustViewBounds="true"
+            android:background="?android:attr/selectableItemBackground"
             android:onClick="clickLogin"
-            android:text="Login" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/cover_login_fb" />
     </RelativeLayout>
 
 </ScrollView>
