--- a/herbal2/res/layout/activity_upload.xml
+++ b/herbal2/res/layout/activity_upload.xml
@@ -1,18 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     tools:context=".UploadActivity" >
 
+    <ImageView
+        android:id="@+id/result_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <tw.edu.ntust.dt.herbal2.view.Preview
+        android:id="@+id/preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </tw.edu.ntust.dt.herbal2.view.Preview>
+
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="SHIDAN HUANG"
         android:textColor="@android:color/white"
@@ -40,5 +53,15 @@
         android:layout_marginBottom="19dp"
         android:adjustViewBounds="true"
         android:src="@drawable/upload_jian" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/name"
+        android:layout_marginTop="-10dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/upload_face_gochi" />
 
 </RelativeLayout>
