--- a/herbal2/res/layout/activity_all.xml
+++ b/herbal2/res/layout/activity_all.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/all_bg"
-    tools:context=".CoverActivity" >
+    android:fadingEdgeLength="0dp"
+    tools:context=".AllActivity" >
 
     <LinearLayout
         android:id="@+id/root"
