--- a/herbal2/res/layout/activity_discover2.xml
+++ b/herbal2/res/layout/activity_discover2.xml
@@ -18,12 +18,25 @@
     </tw.edu.ntust.dt.herbal2.view.Preview>
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/discover_goal"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
         android:src="@drawable/discover_mint" />
+
+    <ImageButton
+        android:id="@+id/close_button"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="clickCloseButton"
+        android:scaleType="fitCenter"
+        android:src="@drawable/upload_button_camera"
+        android:text="Button" />
 
 </RelativeLayout>
