--- a/herbal2/res/layout/activity_recipe.xml
+++ b/herbal2/res/layout/activity_recipe.xml
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/recipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@drawable/cover" />
+        android:src="@drawable/recipe_dragon" />
 
 </ScrollView>
