--- a/herbal2/res/anim/fadein2.xml
+++ b/herbal2/res/anim/fadein2.xml
@@ -2,8 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
   android:interpolator="@android:anim/linear_interpolator">
   <alpha
-      android:fromAlpha="0.1"
+      android:startOffset="500"
+      android:fromAlpha="0"
       android:toAlpha="1.0"
-      android:duration="500"
+      android:duration="1300"
       />
 </set>
