--- a/herbal2/res/layout/activity_recipe.xml
+++ b/herbal2/res/layout/activity_recipe.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/recipe_dragon" />
 
 </ScrollView>
