deal with cover's width

--- a/herbal2/res/layout/activity_cover_parallax.xml
+++ b/herbal2/res/layout/activity_cover_parallax.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     app:parallexOffset="0.25" >
 
     <!-- Background -->
@@ -11,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@drawable/cover_bg1" />
+        android:scaleType="fitCenter"
+        android:src="@drawable/cover_bg" />
 
     <!-- Foreground -->
     <!-- You can place any of the items below as the foreground, but for most control, add the scroll view yourself. -->
@@ -29,7 +31,7 @@
             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="150dp"
                 android:adjustViewBounds="true"
                 android:gravity="center"
                 android:src="@drawable/cover_icon_1" />
@@ -37,7 +39,7 @@
             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="150dp"
                 android:adjustViewBounds="true"
                 android:gravity="center"
                 android:src="@drawable/cover_icon_2" />
@@ -45,7 +47,7 @@
             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="150dp"
                 android:adjustViewBounds="true"
                 android:gravity="center"
                 android:src="@drawable/cover_icon_3" />
