--- a/herbal2/res/layout/activity_recipe.xml
+++ b/herbal2/res/layout/activity_recipe.xml
@@ -4,12 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
-        android:id="@+id/recipe"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/recipe_dragon" />
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/recipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/recipe_dragon" />
+
+        <ImageButton
+            android:id="@+id/close_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:onClick="home"
+            android:scaleType="fitCenter"
+            android:src="@drawable/recipe_button_home"
+            android:text="Button" />
+    </RelativeLayout>
 
 </ScrollView>
